src/objects/Dashboard_View__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dashboard__c</fullName>
        <label>Dashboard</label>
        <referenceTo>Dashboard__c</referenceTo>
        <relationshipLabel>Dashboard Views</relationshipLabel>
        <relationshipName>Dashboard_Views</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>View__c</fullName>
        <label>View</label>
        <referenceTo>View__c</referenceTo>
        <relationshipLabel>Dashboard Views</relationshipLabel>
        <relationshipName>Dashboard_Views</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Dashboard View</label>
    <nameField>
        <displayFormat>DV-{00000}</displayFormat>
        <label>Dashboard View Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dashboard Views</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>